# Auto-Vision-Lane-Detection

./: .gitignore  CMakeLists.txt  README.md
DrivingSimulation/: Camera.cpp  Camera.h  ColorShader.cpp  ColorShader.h  Composition.cpp  Composition.h  D3DInterface.cpp  D3DInterface.h  DebugDisplay.cpp  DebugDisplay.h  DrivingMovementControls.cpp  DrivingMovementControls.h  DrivingSimulation.cpp  DrivingSimulation.h  Font.cpp  Font.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Light.cpp  Light.h  LightShader.cpp  LightShader.h  Model.cpp  Model.h  MovementControls.cpp  MovementControls.h  PerformanceMetrics.cpp  PerformanceMetrics.h  Player.cpp  Player.h  Position.cpp  Position.h  RenderTexture.cpp  RenderTexture.h  Renderable.h  Resource.h  (+29 more)
DrivingSimulation/Shaders/: lightPixelShader.hlsl  lightVertexShader.hlsl  skydomePixelShader.hlsl  skydomeVertexShader.hlsl  textPixelShader.hlsl  textVertexShader.hlsl
DrivingSimulation/Textures/: glyphs.tga  grass.tga  height_map.tga  road.tga  steering_wheel.old  steering_wheel.tga
DrivingSimulation/_Config/: SVM_Detector.cfg  SVM_Trainer.cfg
DrivingSimulation/_SVMModel/: SVM_HOG_LeftLaneSimulation.xml  SVM_HOG_RightLaneSimulation.xml
common_lib/: CMakeLists.txt
common_lib/inc/: ConfigFile.h
common_lib/src/: ConfigFile.cpp
detector/: CMakeLists.txt
detector/interface/: Detector.h  Geometry.h  PidController.h  main.h  proj.h
detector/source/: Detector.cpp  Geometry.cpp  PidController.cpp  SVMTest.cpp  main.cpp
detector_lib/: CMakeLists.txt
detector_lib/interface/: main.h
detector_lib/source/: main.cpp
interface/: Geometry.h  ImageProcessor.h  LaneDetector.h
opencv3.3/libs/: opencv_core330d.lib  opencv_highgui330d.lib  opencv_imgproc330d.lib  readme.txt
opencv3.3/raspbianStretch/: README.txt
opencv3.3/raspbianStretch/include/opencv2/: cvconfig.h
opencv3.3/raspbianStretch/libs/: libopencv_core.so.3.3  libopencv_imgcodecs.so.3.3  libopencv_imgproc.so.3.3.0  libopencv_videoio.so.3.3
opencv3.3/raspbianStretch/libs/pkgconfig/: opencv.pc
opencv3.3/win32 - Release/libs/: opencv_calib3d330.lib  opencv_core330.lib  opencv_dnn330.lib  opencv_features2d330.lib  opencv_flann330.lib  opencv_highgui330.lib  opencv_imgcodecs330.lib  opencv_imgproc330.lib  opencv_ml330.lib  opencv_objdetect330.lib  opencv_photo330.lib  opencv_shape330.lib  opencv_stitching330.lib  opencv_superres330.lib  opencv_video330.lib  opencv_videoio330.lib  opencv_videostab330.lib
opencv3.3/win32/libs/: opencv_core330.lib  opencv_core330d.lib  opencv_highgui330.lib  opencv_highgui330d.lib  opencv_imgcodecs330.lib  opencv_imgcodecs330d.lib  opencv_imgproc330.lib  opencv_imgproc330d.lib  opencv_ml330.lib  opencv_ml330d.lib  opencv_video330d.lib  opencv_videoio330.lib  opencv_videoio330d.lib
source/: Geometry.cpp  ImageProcessor.cpp  LaneDetector.cpp  PidController.cpp  SVMTest.cpp  VideoLaneDetection.cpp
tools/SvmTrainingTool/: SVMTrainingDataTool.java
tools/SvmTrainingTool/core/: SVMTrainingDataHandler.java  SVMTrainingDataToolApplication.java
tools/SvmTrainingTool/gui/: InteractiveGridPanel.java  SVMTrainingDataGUI.java
tools/SvmTrainingTool/util/: Pair.java
tools/templates/: SVM_HOG_LeftLaneVehicle.xml  SVM_HOG_RightLaneVehicle.xml
trainer/: CMakeLists.txt
trainer/source/: SVMTrainer.cpp
